[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/RewardCards.gd" type="Script" id=1]
[ext_resource path="res://Card.tscn" type="PackedScene" id=2]

[node name="RewardCards" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="HBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.5
margin_top = -135.0
margin_right = 144.5
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -153.484
margin_bottom = -133.484
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OK" type="Button" parent="Menu"]
margin_left = 467.0
margin_right = 498.0
margin_bottom = 20.0
text = "OK"

[node name="Cancel" type="Button" parent="Menu"]
margin_left = 502.0
margin_right = 556.0
margin_bottom = 20.0
text = "Cancel"

[node name="Card" parent="." instance=ExtResource( 2 )]
margin_left = 244.276
margin_top = 301.674
margin_right = 244.276
margin_bottom = 301.674
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Menu/OK" to="." method="_on_OK_pressed"]
[connection signal="pressed" from="Menu/Cancel" to="." method="_on_Cancel_pressed"]
